--- a/myreactapp/package.json
+++ b/myreactapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.24.3",
     "closure-util": "^1.26.0",
     "jquery": "^3.4.1",
     "ol": "^6.0.0",
