--- a/myreactapp/package.json
+++ b/myreactapp/package.json
@@ -12,6 +12,7 @@
     "react-bmap": "^1.0.103",
     "react-compound-slider": "^2.3.0",
     "react-dom": "^16.9.0",
+    "react-input-range": "^1.3.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
