--- a/myreactapp/package.json
+++ b/myreactapp/package.json
@@ -13,6 +13,7 @@
     "react-compound-slider": "^2.3.0",
     "react-dom": "^16.9.0",
     "react-input-range": "^1.3.0",
+    "react-katex": "^2.0.2",
     "react-scripts": "3.1.2"
   },
   "scripts": {
